src/test/deca/context/valid/addition_d_assignation.deca
{
    int a;
    (a=4)+(a=5);
}