src/test/deca/context/invalid/reassign.deca
//ERROR :4
{
int x,y,z;
int x=4,y=5,z=6;
}